--- a/css/main.css
+++ b/css/main.css
@@ -1109,6 +1109,7 @@ ul.list li:before{
 /* Contact/Comment Forms 
 ==================== */
 .form-control{
+    width: 100%;
     height: 45px;
     border: 1px solid #ddd;
     border-radius: 0!important;
