--- a/css/main.css
+++ b/css/main.css
@@ -1198,7 +1198,7 @@ input[type="date"] {
     height: 45px;
     border: 1px solid #ddd;
     background: #fff;
-    padding: 5px;
+    padding: 5px 10px 5px 5px;
     display: inline-block !important;
     visibility: visible !important;
 }
