--- a/css/main.css
+++ b/css/main.css
@@ -1193,12 +1193,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 input[type="date"] {
     appearance: none;
     -webkit-appearance: none;
-    color: #ddd;
+    color: #555;
     font-size: 14px;
     height: 45px;
     border: 1px solid #ddd;
     background: #fff;
-    padding: 5px 10px 5px 5px;
+    padding: 5px;
     display: inline-block !important;
     visibility: visible !important;
 }
