--- a/css/main.css
+++ b/css/main.css
@@ -1111,6 +1111,7 @@ ul.list li:before{
 .form-control{
     width: 100%;
     height: 45px;
+    color: #888;
     border: 1px solid #ddd;
     border-radius: 0!important;
 }
@@ -1195,6 +1196,7 @@ input[type="date"], focus {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
 }
+
 /* Sidebar Widgets 
 ==================== */
 .sidebar{}
