--- a/css/responsive.css
+++ b/css/responsive.css
@@ -129,6 +129,9 @@
     #name {
         margin-bottom: 15px;
     }
+    #date {
+        margin-bottom: 5px;
+    }
 }
 /* ---- End of max-width 480px CSS ---- */
 
